# e6502

./: .gitignore  CMakeLists.txt  LICENSE  README.md  addresssing modes.txt  debug.sh  instructions opcodes.txt  line-count.sh  release.sh  updatesrcdeps.sh
include/: cpu.h  instructions.h  mem.h  sizes.h  stdafx.h
include/e6502/: addrmodes.h  cpu.h  decode.h  execute.h  handlers.h  instructions.h  microcode.h
include/m6502/: cpu.h  instructions.h  microcode.h
include/memory/: endianness.h  memory.h  sizes.h
rom/: rom.s
src/: CMakeLists.txt  cpu.cpp  main.cpp  mem.cpp
src/cpu/: cpu.cpp  microcode.cpp
src/e6502/: addrmodes.cpp  cpu.cpp  decode.cpp  execute.cpp  handlers.cpp  microcode.cpp
src/memory/: memory.cpp
